--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+#DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -44,3 +44,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LINE_BOT_CHANNEL_ACCESS_TOKEN=
+LINE_BOT_CHANNEL_SECRET=
+
+LINE_LOGIN_CLIENT_ID=
+LINE_LOGIN_CLIENT_SECRET=
+LINE_LOGIN_REDIRECT=
+
