--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,17 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/socialite": "^5.0",
+        "laravel/tinker": "^2.0",
+        "revolution/laravel-line-sdk": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "barryvdh/laravel-ide-helper": "^2.4"
     },
     "config": {
         "optimize-autoloader": true,
@@ -56,6 +59,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "ide-helper:meta": "php artisan ide-helper:meta",
+        "ide-helper:generate": "php artisan ide-helper:generate",
+        "ide-helper:models": "php artisan ide-helper:models -N"
     }
 }
