--- a/.env.example
+++ b/.env.example
@@ -45,10 +45,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-LINE_BOT_CHANNEL_ACCESS_TOKEN=
+LINE_BOT_CHANNEL_TOKEN=
 LINE_BOT_CHANNEL_SECRET=
 
 LINE_LOGIN_CLIENT_ID=
 LINE_LOGIN_CLIENT_SECRET=
 LINE_LOGIN_REDIRECT=
-
