--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^8.0",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
-        "revolution/laravel-line-sdk": "^1.0"
+        "revolution/laravel-line-sdk": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
