--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3",
-        "barryvdh/laravel-ide-helper": "^2.4"
+        "barryvdh/laravel-ide-helper": "dev-master"
     },
     "config": {
         "optimize-autoloader": true,
@@ -60,8 +60,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "ide-helper:meta": "php artisan ide-helper:meta",
-        "ide-helper:generate": "php artisan ide-helper:generate",
+        "post-update-cmd": [
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta"
+        ],
         "ide-helper:models": "php artisan ide-helper:models -N"
     }
 }
