--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ cache:
 
 before_script:
   - travis_retry composer install --no-interaction --no-suggest
+  - cp .env.example .env
+  - php artisan key:generate
 
 script:
-  - vendor/bin/phpunit
+  - php artisan test
