--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3",
-        "barryvdh/laravel-ide-helper": "dev-master"
+        "barryvdh/laravel-ide-helper": "^2.8.2"
     },
     "config": {
         "optimize-autoloader": true,
