--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: composer update
 on:
   #push:
   schedule:
-    - cron: '0 4 * * *' #UTC
+    - cron: '0 4 * * 4' #UTC
 
 jobs:
   composer_update_job:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: composer update action
-        uses: kawax/composer-update-action@v1
+        uses: kawax/composer-update-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           GIT_NAME: kawax
