--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,13 @@
         "revolution/laravel-line-sdk": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.8.2",
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.2",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3",
-        "barryvdh/laravel-ide-helper": "^2.8.2"
+        "phpunit/phpunit": "^9.3"
     },
     "config": {
         "optimize-autoloader": true,
