--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.1.0",
         "axios": "^0.21.1",
-        "bootstrap": "^4.5.3",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
         "laravel-mix": "^6.0.18",
         "lodash": "^4.17.19",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.15.2",
-        "sass-loader": "^11.0.1"
+        "postcss": "^8.2.15",
+        "postcss-import": "^14.0.2",
+        "resolve-url-loader": "^4.0.0",
+        "tailwindcss": "^2.1.2"
     }
 }
