--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,7 @@
 name: composer update
 
 on:
-  #push:
+  push:
   schedule:
     - cron: '0 4 * * 4' #UTC
 
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: composer update action
-        uses: kawax/composer-update-action@v2
+        uses: kawax/composer-update-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
           GIT_NAME: kawax
