--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "guzzlehttp/guzzle": "^7.5.0",
+        "laravel/framework": "^9.45",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
-        "revolution/laravel-line-sdk": "^1.0"
+        "revolution/laravel-line-sdk": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8.2",
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.2",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3"
     },
     "config": {
