--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,15 +6,19 @@ on:
     - cron: '0 4 * * 4' #UTC
 
 jobs:
-  composer_update_job:
-    runs-on: ubuntu-latest
-    name: composer update
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: composer update action
-        uses: kawax/composer-update-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
-          GIT_NAME: kawax
-          GIT_EMAIL: kawaxbiz@gmail.com
+  composer:
+    uses: kawax/composer-workflow/.github/workflows/update.yml@v1
+    secrets:
+      token: ${{ secrets.ACTION_TOKEN }}
+    with:
+      php: 8.2
+      extensions: mbstring
+      git-name: kawax
+      git-email: 1502086+kawax@users.noreply.github.com
+  npm:
+    uses: kawax/npm-workflow/.github/workflows/update.yml@v1
+    secrets:
+      token: ${{ secrets.ACTION_TOKEN }}
+    with:
+      git-name: kawax
+      git-email: 1502086+kawax@users.noreply.github.com
