--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,21 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
-        "guzzlehttp/guzzle": "^7.5.0",
-        "laravel/framework": "^9.45",
-        "laravel/socialite": "^5.0",
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.5",
+        "laravel/framework": "^10.0",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.0",
         "revolution/laravel-line-sdk": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8.2",
-        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.2",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.3"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -49,7 +49,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
