--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,3 +26,8 @@ jobs:
           php artisan key:generate
       - name: Test
         run: vendor/bin/phpunit
+      - name: Code Coverage
+        uses: qltysh/qlty-action/coverage@v1
+        with:
+          oidc: true
+          files: build/logs/clover.xml
