--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,10 @@ name: tests
 on:
   push:
   pull_request:
-    types: [opened, synchronize]
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   tests:
